[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-regression-tester"
version = "0.1.0"
description = "An MCP server for LLM regression testing: side-by-side model comparison, Claude-as-judge scoring, and cost projection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
model-regression-tester = "model_regression_tester.server:main"

[tool.setuptools]
packages = ["model_regression_tester"]
